src/test/test-models/bad/lang/bad6.stan
data {
   real y;
}
transformed data {
   real z;
   
   y = 10.0;
}
model {
}
